[gd_scene load_steps=18 format=2]

[ext_resource path="res://Tilecostumes/Tile.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/Level13.gd" type="Script" id=4]
[ext_resource path="res://Tilecostumes/Bluetile.tscn" type="PackedScene" id=5]
[ext_resource path="res://Tilecostumes/Redtile.tscn" type="PackedScene" id=6]
[ext_resource path="res://ColorOrbs/RedColorOrb.tscn" type="PackedScene" id=7]
[ext_resource path="res://ExitSprite.tscn" type="PackedScene" id=8]
[ext_resource path="res://ColorOrbs/BlueColorOrb.tscn" type="PackedScene" id=9]
[ext_resource path="res://Hazards/GreenHazard.tscn" type="PackedScene" id=10]
[ext_resource path="res://Tilecostumes/Greentile.tscn" type="PackedScene" id=11]
[ext_resource path="res://Switches/RedSwitch.tscn" type="PackedScene" id=12]
[ext_resource path="res://Switches/GreenSwitch.tscn" type="PackedScene" id=13]
[ext_resource path="res://ColorOrbs/GreenColorOrb.tscn" type="PackedScene" id=14]
[ext_resource path="res://Switches/BlueSwitch.tscn" type="PackedScene" id=18]
[ext_resource path="res://Hazards/RedHazard.tscn" type="PackedScene" id=19]
[ext_resource path="res://Hazards/BlueHazard.tscn" type="PackedScene" id=20]

[node name="Level13" type="Node2D"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource( 2 )]

[node name="Tile" parent="." instance=ExtResource( 1 )]
position = Vector2( 384, 408 )

[node name="Tile12" parent="." instance=ExtResource( 1 )]
position = Vector2( 352, 408 )

[node name="Tile13" parent="." instance=ExtResource( 1 )]
position = Vector2( 320, 408 )

[node name="Tile14" parent="." instance=ExtResource( 1 )]
position = Vector2( 288, 408 )

[node name="Tile15" parent="." instance=ExtResource( 1 )]
position = Vector2( 256, 408 )

[node name="Tile16" parent="." instance=ExtResource( 1 )]
position = Vector2( 224, 408 )

[node name="Tile2" parent="." instance=ExtResource( 1 )]
position = Vector2( 416, 408 )

[node name="Tile4" parent="." groups=[
"Switch4",
] instance=ExtResource( 1 )]
position = Vector2( 416, 376 )

[node name="Tile5" parent="." groups=[
"Switch4",
] instance=ExtResource( 1 )]
position = Vector2( 416, 344 )

[node name="Tile9" parent="." instance=ExtResource( 1 )]
position = Vector2( 480, 408 )

[node name="Tile10" parent="." instance=ExtResource( 1 )]
position = Vector2( 480, 376 )

[node name="Tile11" parent="." instance=ExtResource( 1 )]
position = Vector2( 480, 344 )

[node name="Tile6" parent="." instance=ExtResource( 1 )]
position = Vector2( 416, 312 )

[node name="Tile7" parent="." instance=ExtResource( 1 )]
position = Vector2( 448, 312 )

[node name="Tile17" parent="." instance=ExtResource( 1 )]
position = Vector2( 416, 280 )

[node name="Tile8" parent="." instance=ExtResource( 1 )]
position = Vector2( 480, 312 )

[node name="Tile18" parent="." groups=[
"Switch3",
] instance=ExtResource( 1 )]
position = Vector2( 560, 272 )

[node name="Tile19" parent="." groups=[
"Switch3",
] instance=ExtResource( 1 )]
position = Vector2( 640, 272 )

[node name="Tile20" parent="." groups=[
"Switch3",
] instance=ExtResource( 1 )]
position = Vector2( 752, 192 )

[node name="Tile21" parent="." groups=[
"Switch3",
] instance=ExtResource( 1 )]
position = Vector2( 664, 144 )

[node name="Tile3" parent="." instance=ExtResource( 1 )]
position = Vector2( 448, 408 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 384, 376 )

[node name="ExitSprite" parent="." instance=ExtResource( 8 )]
position = Vector2( 448, 360 )

[node name="RedColorOrb" parent="." instance=ExtResource( 7 )]
position = Vector2( 336, 356 )

[node name="BlueColorOrb" parent="." instance=ExtResource( 9 )]
position = Vector2( 288, 356 )

[node name="GreenColorOrb" parent="." instance=ExtResource( 14 )]
position = Vector2( 240, 356 )

[node name="GreenColorOrb2" parent="." groups=[
"Switch3",
] instance=ExtResource( 14 )]
position = Vector2( 208, 44 )

[node name="RedSwitch" parent="." instance=ExtResource( 12 )]
position = Vector2( 336, 376 )

[node name="RedSwitch2" parent="." groups=[
"Switch2",
] instance=ExtResource( 12 )]
position = Vector2( 464, 280 )

[node name="BlueSwitch" parent="." instance=ExtResource( 18 )]
position = Vector2( 288, 376 )

[node name="GreenSwitch" parent="." instance=ExtResource( 13 )]
position = Vector2( 240, 376 )

[node name="GreenSwitch2" parent="." groups=[
"Switch3",
] instance=ExtResource( 13 )]
position = Vector2( 112, 64 )

[node name="Greentile" parent="." groups=[
"Switch0",
] instance=ExtResource( 11 )]
position = Vector2( 152, 312 )

[node name="Greentile2" parent="." groups=[
"Switch3",
] instance=ExtResource( 11 )]
position = Vector2( 264, 96 )

[node name="Bluetile" parent="." groups=[
"Switch1",
] instance=ExtResource( 5 )]
position = Vector2( 280, 232 )

[node name="Bluetile2" parent="." groups=[
"Switch3",
] instance=ExtResource( 5 )]
position = Vector2( 384, 120 )

[node name="GreenHazard" parent="." groups=[
"Switch3",
] instance=ExtResource( 10 )]
position = Vector2( 600, 192 )

[node name="BlueColorOrb2" parent="." groups=[
"Switch3",
] instance=ExtResource( 9 )]
position = Vector2( 720, 232 )

[node name="BlueHazard" parent="." groups=[
"Switch3",
] instance=ExtResource( 20 )]
position = Vector2( 720, 160 )

[node name="Redtile" parent="." groups=[
"Switch3",
] instance=ExtResource( 6 )]
position = Vector2( 544, 56 )

[node name="Redtile2" parent="." groups=[
"Switch3",
] instance=ExtResource( 6 )]
position = Vector2( 112, 96 )

[node name="RedColorOrb2" parent="." groups=[
"Switch3",
] instance=ExtResource( 7 )]
position = Vector2( 608, 80 )

[node name="RedColorOrb3" parent="." groups=[
"Switch3",
] instance=ExtResource( 7 )]
position = Vector2( 448, 72 )

[node name="BlueHazard2" parent="." groups=[
"Switch3",
] instance=ExtResource( 20 )]
position = Vector2( 352, 88 )

[node name="BlueHazard3" parent="." groups=[
"Switch3",
] instance=ExtResource( 20 )]
position = Vector2( 296, 80 )

[node name="RedHazard" parent="." groups=[
"Switch3",
] instance=ExtResource( 19 )]
position = Vector2( 176, 32 )

[node name="RedHazard2" parent="." groups=[
"Switch3",
] instance=ExtResource( 19 )]
position = Vector2( 144, 64 )

[node name="RedHazard3" parent="." groups=[
"Switch3",
] instance=ExtResource( 19 )]
position = Vector2( 208, 64 )
[connection signal="restart" from="Player" to="." method="_on_Player_restart"]
[connection signal="body_entered" from="ExitSprite" to="CanvasLayer/UI" method="_on_ExitSprite_body_entered"]
[connection signal="body_entered" from="ExitSprite" to="Player" method="_on_ExitSprite_body_entered"]
[connection signal="switchoff" from="RedSwitch" to="." method="_on_Switch2_switchoff"]
[connection signal="switchon" from="RedSwitch" to="." method="_on_Switch2_switchon"]
[connection signal="switchoff" from="RedSwitch2" to="." method="_on_Switch3_switchoff"]
[connection signal="switchon" from="RedSwitch2" to="." method="_on_Switch3_switchon"]
[connection signal="switchoff" from="BlueSwitch" to="." method="_on_Switch1_switchoff"]
[connection signal="switchon" from="BlueSwitch" to="." method="_on_Switch1_switchon"]
[connection signal="switchoff" from="GreenSwitch" to="." method="_on_Switch0_switchoff"]
[connection signal="switchon" from="GreenSwitch" to="." method="_on_Switch0_switchon"]
[connection signal="switchoff" from="GreenSwitch2" to="." method="_on_Switch4_switchoff"]
[connection signal="switchon" from="GreenSwitch2" to="." method="_on_Switch4_switchon"]
